--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
 body{
-    width: 100%;
-    padding: 0px;
-    margin: 0px;
-}
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #e3e1e1b2;
 
-.header-bar {
-    height: 40px; /* 25px of the viewport height */
-    background-color: grey; /* grey background color */
 }
 
 .table-container{
@@ -14,11 +12,71 @@ body{
     background-color: #eeeeee54;
 }
 .tags{
-    background-color: #1fba30;
+    background-color: #A982BC;
     width: fit-content;
     padding: 4px;
     border-radius: 12px;
     color: white;
     font-weight: 600;
 
+}
+
+
+.toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+}
+
+.title {
+    font-size: 24px;
+}
+
+.button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #333;
+    background-color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #ddd;
+}
+.secondary-toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #444;
+    color: white;
+    margin-top: 10px;
+}
+
+.dropdowns {
+    display: flex;
+    gap: 10px;
+}
+
+.dropdown {
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.add-button {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.add-button:hover {
+    background-color: #45a049;
 }
